Fix commit date parsing and list bullet alignment (#3)

--- a/style.css
+++ b/style.css
@@ -70,14 +70,14 @@ p, ul, table { margin-bottom: var(--element-spacing); word-wrap: break-word; ove
 /* Link Lists */
 ul.link-list { list-style: none; padding-left: 0; margin: 0 0 1em 0; }
 ul.link-list li { position: relative; padding-left: 28px; margin: 0.25em 0; min-height: 20px; }
-ul.link-list li::before { content: ""; position: absolute; left: 0; top: 50%; transform: translateY(-50%); width: 16px; height: 16px; background-image: url('https://file.garden/ZhTgSjrp5nAroRKq/098765'); background-size: contain; background-repeat: no-repeat; background-position: center; display: inline-block; }
+ul.link-list li::before { content: ""; position: absolute; left: 0; top: 0.2em; width: 16px; height: 16px; background-image: url('https://file.garden/ZhTgSjrp5nAroRKq/098765'); background-size: contain; background-repeat: no-repeat; background-position: center; display: inline-block; }
 
 ul.profile-list { list-style: disc inside; padding-left: 1em; margin: 0 0 1em 0; }
 ul.profile-list li { margin: 0.2em 0; padding: 0; line-height: 1.5; }
 
 ul.info-list { list-style: none; padding: 0; margin: 0 0 1em 0; }
 ul.info-list li { position: relative; padding-left: 28px; margin: 0.1em 0; line-height: 1.5; }
-ul.info-list li::before { content: ""; position: absolute; left: 0; top: 50%; transform: translateY(-50%); width: 20px; height: 20px; background-image: url('https://file.garden/ZhTgSjrp5nAroRKq/098765'); background-size: contain; background-repeat: no-repeat; background-position: center; display: inline-block; }
+ul.info-list li::before { content: ""; position: absolute; left: 0; top: 0.2em; width: 16px; height: 16px; background-image: url('https://file.garden/ZhTgSjrp5nAroRKq/098765'); background-size: contain; background-repeat: no-repeat; background-position: center; display: inline-block; }
 
 /* Embed Frames */
 .cbox-frame { width: 100%; overflow: hidden; height: 450px; }
